--- a/src/app/features/app-center/app-center.component.html
+++ b/src/app/features/app-center/app-center.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar>
 
 <div class="container mx-auto px-4 py-8">
   <h1 class="text-3xl font-bold text-gray-800 mb-2 text-center">
@@ -63,12 +63,12 @@
 <div class="p-6">
   <router-outlet></router-outlet>
 </div>
+ -->
 
 
 
 
-
-<!-- <app-navbar></app-navbar>
+<app-navbar></app-navbar>
 
 <div class="container mx-auto px-4 py-8 bg-gray-50 min-h-screen">
   <div class="max-w-6xl mx-auto">
@@ -153,4 +153,4 @@
 
 <div class="p-6 bg-gray-50">
   <router-outlet></router-outlet>
-</div> -->
+</div>
